src/misskey_client.h

typedef struct MisskeyClient MisskeyClient;
typedef struct MisskeyAllocator {
    void* (*malloc_fn)(size_t size);
    void* (*realloc_fn)(void* ptr, size_t size);
    void (*free_fn)(void* ptr);
    void* user_data;
} MisskeyAllocator;
typedef enum {
    MISSKEY_OK = 0,
    MISSKEY_ERROR_INVALID_PARAM,
    MISSKEY_ERROR_NETWORK,
    MISSKEY_ERROR_HTTP,
    MISSKEY_ERROR_JSON,
    MISSKEY_ERROR_AUTH,
    MISSKEY_ERROR_ALLOC,
    MISSKEY_ERROR_UNKNOWN
} MisskeyError;
const char* misskey_error_str(MisskeyError err);
const char* misskey_error_str_detail(MisskeyClient* client, MisskeyError err);
void misskey_client_get_last_error(MisskeyClient* client, long* http_code, char** error_detail);
MisskeyClient* misskey_client_new(const char* host);
MisskeyClient* misskey_client_new_with_allocator(const char* host, const MisskeyAllocator* allocator);
void misskey_client_free(MisskeyClient* client);
void misskey_client_set_token(MisskeyClient* client, const char* token);
void misskey_client_set_timeout(MisskeyClient* client, long timeout_secs);
const MisskeyAllocator* misskey_client_get_allocator(const MisskeyClient* client);
MisskeyError misskey_request(MisskeyClient* client, const char* endpoint,
                             const char* request_body, char** response_out);
void misskey_request_set_debug(MisskeyClient* client, int enable);
void misskey_request_print_curl(MisskeyClient* client, const char* endpoint,
                                const char* request_body);
void misskey_free_string(MisskeyClient* client, char* str);
typedef struct MisskeyUser {
    char id[32];
    char name[128];
    char username[64];
    char host[128];
    char avatar_url[512];
    char avatar_blurhash[64];
    int is_bot;
    int is_cat;
} MisskeyUser;
typedef struct MisskeyNote {
    char id[32];
    char created_at[32];
    char text[4096];
    char cw[512];
    char app_id[32];
    char user_id[32];
    char reply_id[32];
    char renote_id[32];
    char channel_id[32];
    char uri[256];
    char url[512];
    int visibility;
    int local_only;
    int visible_user_ids_count;
    int reactions_count;
    int replies_count;
    int renote_count;
    char reaction_emojis[512];
    char renote_text[4096];
    int is_renote;
    int is_reply;
    MisskeyUser user;
} MisskeyNote;
typedef struct MisskeyTimelineOptions {
    int limit;
    int with_files;
    int with_renotes;
    int with_replies;
    int allow_partial;
    const char* since_id;
    const char* until_id;
    long since_date;
    long until_date;
} MisskeyTimelineOptions;
typedef struct MisskeyNotification {
    char id[32];
    char created_at[32];
    char type[32];
    char user_id[32];
    char user_name[128];
    char note_id[32];
    char reaction[64];
    char message[512];
    MisskeyUser user;
} MisskeyNotification;
typedef struct MisskeyDriveFile {
    char id[32];
    char created_at[32];
    char name[256];
    char type[64];
    char md5[64];
    size_t size;
    char url[512];
    char thumbnail_url[512];
    char folder_id[32];
    char user_id[32];
    int is_sensitive;
} MisskeyDriveFile;
typedef struct MisskeyDriveFolder {
    char id[32];
    char created_at[32];
    char name[128];
    char parent_id[32];
    int folders_count;
    int files_count;
} MisskeyDriveFolder;
typedef struct MisskeyDriveInfo {
    int capacity;
    int usage;
    int drive_usage_over_quota;
    int inc_capacity;
} MisskeyDriveInfo;
typedef struct MisskeyTranslateResult {
    char text[4096];
    char source_lang[16];
    char target_lang[16];
} MisskeyTranslateResult;
typedef struct MisskeyClip {
    char id[32];
    char created_at[32];
    char name[128];
    char description[512];
    int is_public;
    int notes_count;
} MisskeyClip;
typedef struct MisskeyMeta {
    char name[128];
    char version[32];
    char uri[256];
    char description[1024];
    char maintainer_name[128];
    char maintainer_email[256];
    char langs[256];
    char banned_mask[32];
    char features[512];
    char mascot_image_url[512];
    char banner_url[512];
    char error_image_url[512];
    char icon_url[512];
    char background_image_url[512];
    char logo_image_url[512];
    char max_note_text_length;
    int enable_emoji_reactions;
    int enable_recursive_reaction;
    int drive_capacity;
    int enable_email;
    int enable_twitter;
    int enable_github;
    int enable_discord;
    int enable_external_nickname_repository;
    int manifest_json;
    int sw;
    int theme_color;
    int federation;
    int enable_hcaptcha;
    int enable_recaptcha;
    int enableturnstile;
    int max_noted_per_w;
    int max_noted_per_a_d;
    int update_since;
} MisskeyMeta;
void misskey_note_init(MisskeyNote* note);
void misskey_user_init(MisskeyUser* user);
void misskey_notification_init(MisskeyNotification* n);
void misskey_drive_file_init(MisskeyDriveFile* f);
void misskey_drive_folder_init(MisskeyDriveFolder* f);
void misskey_drive_info_init(MisskeyDriveInfo* info);
void misskey_translate_result_init(MisskeyTranslateResult* r);
void misskey_clip_init(MisskeyClip* c);
void misskey_meta_init(MisskeyMeta* m);
typedef struct {
    const char* url;
    const char* output_path;
    misskey_write_callback write_cb;
    void* write_userdata;
    long resume_from;
    int follow_redirects;
} MisskeyDownloadOptions;
MisskeyError misskey_drive_files_download(MisskeyClient* client, const char* file_id,
                                          const MisskeyDownloadOptions* options,
                                          long* http_code_out, long* content_length_out);
MisskeyError misskey_meta_raw(MisskeyClient* client, char** response_out);
MisskeyError misskey_notes_timeline_raw(MisskeyClient* client, int limit, int include_local_renotes, char** response_out);
MisskeyError misskey_notes_local_timeline_raw(MisskeyClient* client, int limit, char** response_out);
MisskeyError misskey_notes_local_timeline_full_raw(MisskeyClient* client, MisskeyTimelineOptions* opts, char** response_out);
MisskeyError misskey_notes_global_timeline_raw(MisskeyClient* client, int limit, char** response_out);
MisskeyError misskey_notes_global_timeline_full_raw(MisskeyClient* client, MisskeyTimelineOptions* opts, char** response_out);
MisskeyError misskey_notes_raw(MisskeyClient* client, const char* text, const char* reply_id, const char* renote_id, const char* channel_id, int limit, int offset, const char* user_id, int local_only, int reply, int renote, int with_files, const char* since_id, const char* until_id, char** response_out);
MisskeyError misskey_notes_show_raw(MisskeyClient* client, const char* note_id, char** response_out);
MisskeyError misskey_notes_delete_raw(MisskeyClient* client, const char* note_id, char** response_out);
MisskeyError misskey_notes_create_raw(MisskeyClient* client, const char* text, const char* reply_id, const char* renote_id, char** response_out);
MisskeyError misskey_i_notifications_raw(MisskeyClient* client, int limit, char** response_out);
MisskeyError misskey_drive_raw(MisskeyClient* client, char** response_out);
MisskeyError misskey_drive_files_raw(MisskeyClient* client, int limit, int folder_id, char** response_out);
MisskeyError misskey_drive_files_create_raw(MisskeyClient* client, const char* file_path, const char* folder_id, const char* name, char** response_out);
MisskeyError misskey_drive_files_delete_raw(MisskeyClient* client, const char* file_id, char** response_out);
MisskeyError misskey_drive_files_update_raw(MisskeyClient* client, const char* file_id, const char* folder_id, const char* name, char** response_out);
MisskeyError misskey_drive_files_find_raw(MisskeyClient* client, const char* hash, char** response_out);
MisskeyError misskey_drive_files_show_raw(MisskeyClient* client, const char* file_id, const char* url, char** response_out);
MisskeyError misskey_drive_files_upload_from_url_raw(MisskeyClient* client, const char* url, const char* folder_id, int is_sensitive, const char* comment, char** response_out);
MisskeyError misskey_drive_folders_raw(MisskeyClient* client, int limit, const char* folder_id, char** response_out);
MisskeyError misskey_drive_folders_create_raw(MisskeyClient* client, const char* name, const char* parent_id, char** response_out);
MisskeyError misskey_drive_folders_delete_raw(MisskeyClient* client, const char* folder_id, char** response_out);
MisskeyError misskey_drive_folders_update_raw(MisskeyClient* client, const char* folder_id, const char* name, const char* parent_id, char** response_out);
MisskeyError misskey_translate_raw(MisskeyClient* client, const char* note_id, const char* target_lang, char** response_out);
MisskeyError misskey_clips_list_raw(MisskeyClient* client, char** response_out);
MisskeyError misskey_clips_show_raw(MisskeyClient* client, const char* clip_id, char** response_out);
MisskeyError misskey_clips_create_raw(MisskeyClient* client, const char* name, const char* description, int is_public, char** response_out);
MisskeyError misskey_clips_update_raw(MisskeyClient* client, const char* clip_id, const char* name, const char* description, int is_public, char** response_out);
MisskeyError misskey_clips_delete_raw(MisskeyClient* client, const char* clip_id, char** response_out);
MisskeyError misskey_clips_add_note_raw(MisskeyClient* client, const char* clip_id, const char* note_id, char** response_out);
MisskeyError misskey_clips_remove_note_raw(MisskeyClient* client, const char* clip_id, const char* note_id, char** response_out);
MisskeyError misskey_clips_notes_raw(MisskeyClient* client, const char* clip_id, int limit, char** response_out);