misskey/misskey.v

module misskey

import json // includes cJSON

$if android {
    #flag -I /opt/vcpkg/installed/arm64-android-release/include/../include
}

#flag -I@DIR/src
#flag @DIR/src/misskey_client.o
#flag -lcurl


#include "misskey_client.h"
#include <string.h>

struct C.MisskeyClient {}

fn C.strncpy(&char, charptr, int) &char

fn C.misskey_client_new(host charptr) &C.MisskeyClient
fn C.misskey_client_free(client &C.MisskeyClient)
fn C.misskey_client_set_token(client &C.MisskeyClient, token charptr)
fn C.misskey_client_set_timeout(client &C.MisskeyClient, timeout_secs int)
fn C.misskey_request(client &C.MisskeyClient, endpoint charptr, body charptr, response &charptr) int
fn C.misskey_meta_raw(client &C.MisskeyClient, response &charptr) int
fn C.misskey_users_show_raw(client &C.MisskeyClient, user_id charptr, username charptr, host charptr, detailed int, response &charptr) int
fn C.misskey_users_show(client &C.MisskeyClient, user_id charptr, username charptr, host charptr, detailed int, user_out &C.MisskeyUser) int
fn C.misskey_notes_timeline_raw(client &C.MisskeyClient, limit int, include_local_renotes int, response &charptr) int
fn C.misskey_notes_local_timeline_raw(client &C.MisskeyClient, limit int, response &charptr) int
fn C.misskey_notes_global_timeline_raw(client &C.MisskeyClient, limit int, response &charptr) int

struct C.MisskeyTimelineOptions {
mut:
	limit int
	with_files int
	with_renotes int
	with_replies int
	allow_partial int
	since_id charptr
	until_id charptr
	since_date int
	until_date int
}

fn C.misskey_notes_create_full_raw(client &C.MisskeyClient, text charptr, reply_id charptr, renote_id charptr, file_ids voidptr, file_ids_count int, visibility int, cw charptr, local_only int, channel_id charptr, auto_sensitive int, media_ids charptr, draft int, response &charptr) int
fn C.misskey_notes_create_full(client &C.MisskeyClient, text charptr, reply_id charptr, renote_id charptr, file_ids voidptr, file_ids_count int, visibility int, cw charptr, local_only int, channel_id charptr, auto_sensitive int, draft int, note_out &C.MisskeyNote) int

fn C.misskey_notes_local_timeline_full_raw(client &C.MisskeyClient, opts voidptr, response &charptr) int
fn C.misskey_notes_global_timeline_full_raw(client &C.MisskeyClient, opts voidptr, response &charptr) int

fn C.misskey_notes_create_raw(client &C.MisskeyClient, text charptr, reply_id charptr, renote_id charptr, response &charptr) int
fn C.misskey_i_notifications_raw(client &C.MisskeyClient, limit int, response &charptr) int
fn C.misskey_drive_raw(client &C.MisskeyClient, response &charptr) int
fn C.misskey_drive_files_raw(client &C.MisskeyClient, limit int, folder_id int, response &charptr) int
fn C.misskey_drive_files_create_raw(client &C.MisskeyClient, file_path charptr, folder_id charptr, name charptr, response &charptr) int
fn C.misskey_drive_files_delete_raw(client &C.MisskeyClient, file_id charptr, response &charptr) int
fn C.misskey_drive_files_update_raw(client &C.MisskeyClient, file_id charptr, folder_id charptr, name charptr, response &charptr) int
fn C.misskey_drive_files_find_raw(client &C.MisskeyClient, hash charptr, response &charptr) int
fn C.misskey_drive_files_show_raw(client &C.MisskeyClient, file_id charptr, url charptr, response &charptr) int
fn C.misskey_drive_files_upload_from_url_raw(client &C.MisskeyClient, url charptr, folder_id charptr, is_sensitive int, comment charptr, response &charptr) int

type WriteCallback = fn (voidptr, int, int, voidptr) int

fn C.misskey_drive_files_download(client &C.MisskeyClient, file_id charptr, options voidptr, http_code &int, content_length &int) int

fn C.misskey_drive_folders_raw(client &C.MisskeyClient, limit int, folder_id charptr, response &charptr) int
fn C.misskey_drive_folders_create_raw(client &C.MisskeyClient, name charptr, parent_id charptr, response &charptr) int
fn C.misskey_drive_folders_delete_raw(client &C.MisskeyClient, folder_id charptr, response &charptr) int
fn C.misskey_drive_folders_update_raw(client &C.MisskeyClient, folder_id charptr, name charptr, parent_id charptr, response &charptr) int
fn C.misskey_notes_raw(client &C.MisskeyClient, text charptr, reply_id charptr, renote_id charptr, channel_id charptr, limit int, offset int, user_id charptr, local_only int, reply int, renote int, with_files int, since_id charptr, until_id charptr, response &charptr) int
fn C.misskey_notes_show_raw(client &C.MisskeyClient, note_id charptr, response &charptr) int
fn C.misskey_notes_delete_raw(client &C.MisskeyClient, note_id charptr, response &charptr) int

fn C.misskey_clips_list_raw(client &C.MisskeyClient, response &charptr) int
fn C.misskey_clips_show_raw(client &C.MisskeyClient, clip_id charptr, response &charptr) int
fn C.misskey_clips_create_raw(client &C.MisskeyClient, name charptr, description charptr, is_public int, response &charptr) int
fn C.misskey_clips_update_raw(client &C.MisskeyClient, clip_id charptr, name charptr, description charptr, is_public int, response &charptr) int
fn C.misskey_clips_delete_raw(client &C.MisskeyClient, clip_id charptr, response &charptr) int
fn C.misskey_clips_add_note_raw(client &C.MisskeyClient, clip_id charptr, note_id charptr, response &charptr) int
fn C.misskey_clips_remove_note_raw(client &C.MisskeyClient, clip_id charptr, note_id charptr, response &charptr) int
fn C.misskey_clips_notes_raw(client &C.MisskeyClient, clip_id charptr, limit int, response &charptr) int

fn C.misskey_notes_reactions_create_raw(client &C.MisskeyClient, note_id charptr, reaction charptr, response &charptr) int
fn C.misskey_notes_reactions_delete_raw(client &C.MisskeyClient, note_id charptr, response &charptr) int
fn C.misskey_notes_reactions_raw(client &C.MisskeyClient, note_id charptr, reaction_type charptr, limit int, response &charptr) int
fn C.misskey_notes_reactions_create(client &C.MisskeyClient, note_id charptr, reaction charptr) int
fn C.misskey_notes_reactions_delete(client &C.MisskeyClient, note_id charptr) int
fn C.misskey_notes_reactions(client &C.MisskeyClient, note_id charptr, reaction_type charptr, limit int, reactions_out &&C.MisskeyReaction, count_out &int) int
fn C.misskey_free_reactions(client &C.MisskeyClient, reactions &C.MisskeyReaction, count int)

fn C.misskey_translate_raw(client &C.MisskeyClient, note_id charptr, target_lang charptr, response &charptr) int
fn C.misskey_request_set_debug(client &C.MisskeyClient, enable int)
fn C.misskey_free_string(client &C.MisskeyClient, str charptr)
fn C.misskey_error_str(err int) charptr
fn C.misskey_error_str_detail(client &C.MisskeyClient, err int) charptr

fn C.misskey_client_new_with_allocator(host charptr, allocator voidptr) &C.MisskeyClient
fn C.misskey_client_get_allocator(client &C.MisskeyClient) voidptr
fn C.misskey_request_print_curl(client &C.MisskeyClient, endpoint charptr, body charptr)
fn C.misskey_client_get_last_error(client &C.MisskeyClient, http_code &int, error_detail &charptr)

fn C.misskey_client_set_proxy(client &C.MisskeyClient, proxy &C.MisskeyProxy) int
fn C.misskey_client_set_proxy_url(client &C.MisskeyClient, proxy_url charptr) int
fn C.misskey_client_clear_proxy(client &C.MisskeyClient)
fn C.misskey_client_get_proxy(client &C.MisskeyClient) &C.MisskeyProxy

struct C.MisskeyProxy {
mut:
	proxy_type int
	host [256]u8
	port int
	username [128]u8
	password [128]u8
}

// C struct declarations for structured API
struct C.MisskeyUser {
mut:
	id [32]u8
	name [128]u8
	username [64]u8
	host [128]u8
	avatar_url [512]u8
	avatar_blurhash [64]u8
	banner_url [512]u8
	description [1024]u8
	url [512]u8
	followers_count int
	following_count int
	notes_count int
	is_bot int
	is_cat int
	is_locked int
	is_silenced int
	has_pending_follow_request int
}

struct C.MisskeyNote {
mut:
	id [32]u8
	created_at [32]u8
	text [4096]u8
	cw [512]u8
	app_id [32]u8
	user_id [32]u8
	reply_id [32]u8
	renote_id [32]u8
	channel_id [32]u8
	uri [256]u8
	url [512]u8
	visibility int
	local_only int
	reactions_count int
	replies_count int
	renote_count int
	reaction_emojis [512]u8
	renote_text [4096]u8
	is_renote int
	is_reply int
	has_files int
	files_count int
	file_ids [16][32]u8
	user C.MisskeyUser
}

struct C.MisskeyNotification {
mut:
	id [32]u8
	created_at [32]u8
	type [32]u8
	user_id [32]u8
	user_name [128]u8
	note_id [32]u8
	reaction [64]u8
	message [512]u8
	user C.MisskeyUser
}

struct C.MisskeyReaction {
mut:
	id [32]u8
	created_at [32]u8
	type [64]u8
	user_id [32]u8
	user_name [128]u8
	user C.MisskeyUser
}

struct C.MisskeyDriveFile {
mut:
	id [32]u8
	created_at [32]u8
	name [256]u8
	type [64]u8
	md5 [64]u8
	size usize
	url [512]u8
	thumbnail_url [512]u8
	folder_id [32]u8
	user_id [32]u8
	is_sensitive int
}

struct C.MisskeyDriveFolder {
mut:
	id [32]u8
	created_at [32]u8
	name [128]u8
	parent_id [32]u8
	folders_count int
	files_count int
}

struct C.MisskeyDriveInfo {
mut:
	capacity int
	usage int
	drive_usage_over_quota int
	inc_capacity int
}

struct C.MisskeyTranslateResult {
mut:
	text [4096]u8
	source_lang [16]byte
	target_lang [16]byte
}

struct C.MisskeyClip {
mut:
	id [32]u8
	created_at [32]u8
	name [128]u8
	description [512]u8
	is_public int
	notes_count int
}

struct C.MisskeyMeta {
mut:
	name [128]u8
	version [32]u8
	uri [256]u8
	description [1024]byte
	maintainer_name [128]u8
	max_note_text_length int
	enable_emoji_reactions int
	drive_capacity int
}

// Structured API C functions
fn C.misskey_note_init(note &C.MisskeyNote)
fn C.misskey_user_init(user &C.MisskeyUser)
fn C.misskey_notification_init(n &C.MisskeyNotification)
fn C.misskey_drive_file_init(f &C.MisskeyDriveFile)
fn C.misskey_drive_folder_init(f &C.MisskeyDriveFolder)
fn C.misskey_drive_info_init(info &C.MisskeyDriveInfo)
fn C.misskey_translate_result_init(r &C.MisskeyTranslateResult)
fn C.misskey_clip_init(c &C.MisskeyClip)
fn C.misskey_meta_init(m &C.MisskeyMeta)
